[gd_scene load_steps=6 format=3 uid="uid://xb2hqirwpxx5"]

[ext_resource type="Script" uid="uid://cc25y2tlihodb" path="res://turret.gd" id="1_tjdg3"]
[ext_resource type="PackedScene" uid="uid://bxqilk4nwc52i" path="res://enemy_water_droplet.tscn" id="2_c5apd"]
[ext_resource type="Texture2D" uid="uid://b0kdg6c7g51b0" path="res://Textures/Turret/Octoturret90.png" id="3_c5apd"]
[ext_resource type="AudioStream" uid="uid://cly57ml10x6f6" path="res://Sound/FX/bubble_1.wav" id="4_coqkk"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c5apd"]
radius = 83.8961

[node name="Turret" type="Node2D" groups=["enemy"]]
script = ExtResource("1_tjdg3")
enemy_projectile_scene = ExtResource("2_c5apd")

[node name="Head" type="Sprite2D" parent="."]
scale = Vector2(0.34375, 0.34375)
texture = ExtResource("3_c5apd")

[node name="Muzzle" type="Marker2D" parent="Head"]
position = Vector2(279.273, 0)

[node name="FiringRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="RangeCollisionShape" type="CollisionShape2D" parent="FiringRange"]
scale = Vector2(8.4, 8.4)
shape = SubResource("CircleShape2D_c5apd")

[node name="DamageCollider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="DamageCollisionShape" type="CollisionShape2D" parent="DamageCollider"]
z_index = 1
shape = SubResource("CircleShape2D_c5apd")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="Sounds" type="Node2D" parent="."]

[node name="Bubble" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource("4_coqkk")

[connection signal="area_entered" from="DamageCollider" to="." method="_on_damage_collider_area_entered"]
